--- a/amazonka-s3-encryption/amazonka-s3-encryption.cabal
+++ b/amazonka-s3-encryption/amazonka-s3-encryption.cabal
@@ -31,7 +31,9 @@ library
     other-modules:
 
     build-depends:
-          amazonka-core == 1.3.0.*
+          amazonka      == 1.3.0.*
+        , amazonka-core == 1.3.0.*
+        , amazonka-kms  == 1.3.0.*
         , amazonka-s3   == 1.3.0.*
         , aeson
         , base          >= 4.7     && < 5
@@ -40,5 +42,8 @@ library
         , bytestring
         , conduit-combinators
         , mono-traversable
+        , http-client
         , unordered-containers
         , memory
+        , case-insensitive
+        , lens
