--- a/amazonka-s3-encryption/amazonka-s3-encryption.cabal
+++ b/amazonka-s3-encryption/amazonka-s3-encryption.cabal
@@ -27,8 +27,10 @@ library
 
     exposed-modules:
           Network.AWS.S3.Encryption
-
-    other-modules:
+        , Network.AWS.S3.Encryption.GetObject
+        , Network.AWS.S3.Encryption.PutObject
+        , Network.AWS.S3.Encryption.Envelope
+        , Network.AWS.S3.Encryption.Types
 
     build-depends:
           amazonka      == 1.3.0.*
@@ -38,7 +40,6 @@ library
         , aeson
         , base          >= 4.7     && < 5
         , cryptonite
-        , transformers
         , bytestring
         , conduit-combinators
         , mono-traversable
@@ -47,3 +48,8 @@ library
         , memory
         , case-insensitive
         , lens
+        , text
+        , mtl
+        , conduit
+        , exceptions
+        , resourcet
